Causeview Package Complete/ant script/retrieveUnpackaged/objects/Tribute__c.object
<CustomObject>
    <description>Causeview - In memory of someone or to commemorate a holiday, birthday, wedding or other special occasion.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tributes</relationshipLabel>
        <relationshipName>Tributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_from__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fund the tribute is associated to.</description>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Tributes</relationshipLabel>
        <relationshipName>Tributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Default_Fund__r.Id, Default_Fund__r.Fund_Name__c, &quot;_self&quot;)</formula>
        <label>Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <label>Tribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Honour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Memory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tribute_Type__c</columns>
        <columns>Date_from__c</columns>
        <columns>Date_To__c</columns>
        <columns>Default_Fund__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>